ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontent-ingress
  namespace: ingress-nginx
  labels:
    name: frontent-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: k8s-ingressn-frontent-309edc394a-1718933395.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: eks-sample-linux-service
            port: 
              number: 80
